[gd_scene load_steps=6 format=3 uid="uid://dfk6k8wqglhw"]

[ext_resource type="Script" path="res://scripts/terminal.gd" id="1_1kwf7"]
[ext_resource type="PackedScene" uid="uid://djp572fv627fw" path="res://scenes/phone.tscn" id="1_pd5wc"]
[ext_resource type="PackedScene" uid="uid://cse0ry8yecycg" path="res://scenes/transfer.tscn" id="2_b2fjw"]
[ext_resource type="AudioStream" uid="uid://cqedj0urybm4f" path="res://sound/digital-phone-ring-88932.mp3" id="4_s76m5"]
[ext_resource type="AudioStream" uid="uid://boynx3ov6oj7o" path="res://sound/old-radio-button-click-97549.mp3" id="5_lmoxt"]

[node name="Terminal" type="Node2D"]
script = ExtResource("1_1kwf7")

[node name="Phone" parent="." instance=ExtResource("1_pd5wc")]

[node name="Phone2" parent="." instance=ExtResource("1_pd5wc")]
position = Vector2(50, 0)

[node name="Transfer" parent="." instance=ExtResource("2_b2fjw")]
position = Vector2(100, 13)

[node name="Transfer2" parent="." instance=ExtResource("2_b2fjw")]
position = Vector2(150, 13)

[node name="Transfer3" parent="." instance=ExtResource("2_b2fjw")]
position = Vector2(200, 13)

[node name="Transfer4" parent="." instance=ExtResource("2_b2fjw")]
position = Vector2(250, 13)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_s76m5")
volume_db = -11.243

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lmoxt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
